# tuifs

./: Cargo.toml  README.md  \
client/: Cargo.toml
client/src/: app.rs  httpclient.rs  main.rs  statefullist.rs  ui.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
shared/: Cargo.toml
shared/src/: shared.rs
