[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
warp = "0.3"
shared = { path = "../shared" }  # Optional, if using shared library
chrono = "0.4.39"
http-body-util ={ version= "0.1.2" }
hyper = {version = "1.5.1", features = ["full"] }
tokio-util = {version = "0.7.13", features = ["full"] }
rand = "0.8.5"
url = "2.5.4"
bytes = "1.9.0"
arc = "0.0.1"
hyper-util = {version = "0.1", features = ["full"] }
futures = "0.3.31"
map-ok = "1.0.0"
map_err = "0.1.0"

