[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }  # Optional, if using shared library
chrono = "0.4.39"
http-body-util = "0.1.2"
hyper = {version = "1.5.1", features = ["full"] }
rand = "0.8.5"
url = "2.5.4"
bytes = "1.9.0"
arc = "0.0.1"
hyper-util = {version = "0.1.10", features = ["tokio"] }

